--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -23,8 +23,8 @@
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="241dp"
+        android:layout_height="69dp"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="100dp"
         android:text="Войти"
