--- a/app/src/main/res/layout/fragment_employees_list.xml
+++ b/app/src/main/res/layout/fragment_employees_list.xml
@@ -7,9 +7,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_employees"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/back"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
