--- a/app/src/main/res/layout/item_employee.xml
+++ b/app/src/main/res/layout/item_employee.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="16dp"
-    android:background="#808080"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="16dp"
+    android:background="@color/back"
+    android:backgroundTint="@color/back"
+    android:foregroundTint="@color/back"
     android:padding="8dp">
 
 
@@ -16,6 +18,7 @@
         android:gravity="center"
         android:text="Имя:"
         android:textAlignment="center"
+        android:textColor="@color/but"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,6 +31,7 @@
         android:gravity="center"
         android:text="Фамилия:"
         android:textAlignment="center"
+        android:textColor="@color/but"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvNameTitle" />
 
@@ -40,6 +44,7 @@
         android:gravity="center"
         android:text="Отдел:"
         android:textAlignment="center"
+        android:textColor="@color/but"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvSecondNameTitle" />
 
@@ -51,6 +56,7 @@
         android:layout_marginStart="12dp"
         android:text="Василий"
         android:textAlignment="center"
+        android:textColor="@color/but"
         app:layout_constraintBottom_toBottomOf="@id/tvNameTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
@@ -66,6 +72,7 @@
         android:layout_marginTop="12dp"
         android:text="Котов"
         android:textAlignment="center"
+        android:textColor="@color/but"
         app:layout_constraintBottom_toBottomOf="@id/tvSecondNameTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
@@ -82,6 +89,7 @@
         android:gravity="center"
         android:text="Психиатрия"
         android:textAlignment="center"
+        android:textColor="@color/but"
         app:layout_constraintBottom_toBottomOf="@id/tvSectorTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
