--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/log"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/back">
 
     <TextView
         android:id="@+id/textView4"
@@ -14,7 +15,8 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
         android:text="@string/login_screen_hello_message"
-        android:textSize="34sp"
+        android:textAlignment="center"
+        android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -27,11 +29,14 @@
         android:layout_height="69dp"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="100dp"
+        android:backgroundTint="@color/but"
         android:text="Войти"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_line"
+        app:layout_constraintVertical_bias="0.515"
         tools:text="Войти">
 
     </Button>
