--- a/app/src/main/res/layout/login_register.xml
+++ b/app/src/main/res/layout/login_register.xml
@@ -5,8 +5,8 @@
     android:id="@+id/logReg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CAB9B9"
-    android:backgroundTint="#FFFFFF">
+    android:background="@color/back"
+    android:backgroundTint="@color/back">
 
     <TextView
         android:id="@+id/textView"
@@ -15,6 +15,7 @@
         android:layout_marginTop="150dp"
         android:text="@string/hello_message"
         android:textAlignment="center"
+        android:textColor="@color/but"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,8 +28,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginBottom="150dp"
-        android:backgroundTint="#117F8E"
+        android:backgroundTint="@color/but"
         android:text="@string/login_button"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -39,8 +41,10 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="150dp"
-        android:backgroundTint="#117F8E"
+        android:backgroundTint="@color/but"
         android:text="@string/register_button"
+        android:textAlignment="textStart"
+        android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,6 +56,7 @@
         android:layout_height="50dp"
         android:text="@string/app_name"
         android:textAlignment="center"
+        android:textColor="@color/but"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView"
