--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/back">
 
     <TextView
         android:id="@+id/editTextTextEmailAddress"
@@ -12,6 +13,7 @@
         android:layout_marginTop="50dp"
         android:ems="10"
         android:text="@string/register_screen_hello_message"
+        android:textColor="@color/but"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +31,7 @@
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
+        android:textColor="@color/but"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,6 +49,7 @@
         android:hint="Пароль"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:textColor="@color/but"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,6 +65,7 @@
         android:layout_marginEnd="100dp"
         android:hint="Имя"
         android:minHeight="48dp"
+        android:textColor="@color/but"
         app:layout_constraintBottom_toTopOf="@+id/reg_family"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -77,6 +82,7 @@
         android:layout_marginBottom="10dp"
         android:hint="Фамилия"
         android:minHeight="48dp"
+        android:textColor="@color/but"
         app:layout_constraintBottom_toTopOf="@+id/password_first"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,6 +97,8 @@
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="50dp"
         android:hint="Ваш отдел"
+        android:minHeight="48dp"
+        android:textColor="@color/but"
         app:layout_constraintBottom_toTopOf="@+id/done_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +112,9 @@
         android:layout_marginTop="56dp"
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="57dp"
+        android:backgroundTint="@color/but"
         android:text="Готово"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
